src/github.com/ebay/akutan/query/parser/testdata/select/distinct/errors/unknown_kw.bql
SELECT
    WHOAMI ?rim
WHERE {
    ?rim rdf:type products:rims
    ?rim <size> ?sz
}
